--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,20 +1,32 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
-    <ion-title>
-      Blank
-    </ion-title>
+    <ion-title> Blank </ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Blank</ion-title>
-    </ion-toolbar>
-  </ion-header>
-
   <div id="container">
-    <strong>Ready to create an app?</strong>
-    <p>Start with Ionic <a target="_blank" rel="noopener noreferrer" href="https://ionicframework.com/docs/components">UI Components</a></p>
+    <div *ngIf="imageUrl">
+      <ion-img [src]="imageUrl"></ion-img>
+    </div>
+    <div>
+      <div *ngIf="progress> 0">
+        <ion-progress-bar
+          [buffer]="buffer"
+          [value]="progress"
+        ></ion-progress-bar>
+        <ion-text>{{pluginResult}}</ion-text>
+      </div>
+    </div>
   </div>
 </ion-content>
+<ion-footer>
+  <ion-toolbar>
+    <div class="centered-footer">
+      <ion-button (click)="takePhoto()">Take Photo</ion-button>
+      <ion-button (click)="startDownload()" color="warning"
+        >Download</ion-button
+      >
+    </div>
+  </ion-toolbar>
+</ion-footer>
